--- a/Web/Portfolio/src/html/contact.html
+++ b/Web/Portfolio/src/html/contact.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <nav>
-        <ul class="nav-container">
-            <li class="nav-item"><span                   >Web lab1</span></li>
-            <li class="nav-item"><a href="index.html"    >Home</a></li>
-            <li class="nav-item"><a href="about.html"    >About</a></li>
-            <li class="nav-item"><a href="interests.html">My interests</a></li>
-            <li class="nav-item"><a href="learning.html" >Learning</a></li>
-            <li class="nav-item"><a href="photos.html"   >Photos</a></li>
-            <li class="nav-item"><a href="contact.html"  >Contact</a></li>
-            <li class="nav-item"><a href="test.html"     >Test</a></li>
+        <ul>
+            <li><span                   >Web lab1</span></li>
+            <li><a href="index.html"    >Home</a></li>
+            <li><a href="about.html"    >About</a></li>
+            <li><a href="interests.html">My interests</a></li>
+            <li><a href="learning.html" >Learning</a></li>
+            <li><a href="photos.html"   >Photos</a></li>
+            <li><a href="contact.html"  >Contact</a></li>
+            <li><a href="test.html"     >Test</a></li>
         </ul>
     </nav>
     <img src="../images/portrait.jpg" class="portrait">
