Get rid of form-container class

--- a/Web/Portfolio/src/html/test.html
+++ b/Web/Portfolio/src/html/test.html
@@ -31,9 +31,9 @@
             <p>All fields are required!</p>
 
             <form method="POST" action="someaction">
-                <ol class="form-container">
+                <ol>
                     <li>
-                        <label>От чего зависит величина стрелок размерной линии?</label>
+                        <p>От чего зависит величина стрелок размерной линии?</p>
                         <label for="1" class="inline">От длины размерной линии</label>
                         <input type="radio" id="1" value="1" checked="true" name="question1">
                         <label for="2" class="inline">От толщины линии  контура изображения</label>
@@ -64,7 +64,7 @@
                     </li>
                     <li>
                         <label for="message-input">Your Message</label>
-                        <textarea name="field5" id="message-input" class="field-long field-textarea"></textarea>
+                        <textarea name="field4" id="message-input" class="field-long field-textarea"></textarea>
                     </li>
                     <li>
                         <input type="submit" value="Submit" />
