--- a/Web/Portfolio/src/html/contact.html
+++ b/Web/Portfolio/src/html/contact.html
@@ -34,7 +34,7 @@
                 <ol>
                     <li>
                         <label for="full-name-input">Full Name</label>
-                        <input type="text" name="full-name" id="full-name-input" class="field-long" placeholder="First" />
+                        <input type="text" name="full-name" id="full-name-input" class="field-long" />
                     </li>
                     <li>
                         <label for="email-input">Email</label>
@@ -46,7 +46,7 @@
                     </li>
                     <li>
                         <label for="message-input">Your Message</label>
-                        <textarea name="field4" id="message-input" class="field-long field-textarea"></textarea>
+                        <textarea name="field4" id="message-input" class="field-long"></textarea>
                     </li>
                     <li>
                         <input type="submit" value="Submit" />
