--- a/Web/Portfolio/src/html/test.html
+++ b/Web/Portfolio/src/html/test.html
@@ -48,7 +48,7 @@
                     </li>
                     <li>
                         <label for="question3">Какие размеры являются рабочими? </label>
-                        <textarea name="question3" id="question3" class="field-long field-textarea"></textarea>
+                        <textarea name="question3" id="question3" class="field-long"></textarea>
                     </li>
                     <li>
                         <label for="full-name-input">Full Name</label>
@@ -64,7 +64,7 @@
                     </li>
                     <li>
                         <label for="message-input">Your Message</label>
-                        <textarea name="field4" id="message-input" class="field-long field-textarea"></textarea>
+                        <textarea name="field4" id="message-input" class="field-long"></textarea>
                     </li>
                     <li>
                         <input type="submit" value="Submit" />
