Remove unnecessary classes from table styling

--- a/Web/Portfolio/src/html/learning.html
+++ b/Web/Portfolio/src/html/learning.html
@@ -28,53 +28,53 @@
             <p>Институт информационных технологий и управления в технических системах</p>
             <p>Кафедра информационных систем</p>
 
-            <table class="table">
-                <tr class="table-row">
-                    <td class="td" colspan="9">Дисциплины по семестрам</td>
+            <table>
+                <tr>
+                    <td colspan="9">Дисциплины по семестрам</td>
                 </tr>
-                <tr class="table-row odd">
-                    <th scope="row" class="th">1 семестр</td>
-                    <td class="td">Высшая математика</td>
-                    <td class="td">Алгоритмизация и программирование</td>
-                    <td class="td">Информатика</td>
-                    <td class="td">История</td>
-                    <td class="td">Физика</td>
-                    <td class="td">Экология</td>
-                    <td class="td">Дискретная математика</td>
-                    <td class="td">Английский язык</td>
+                <tr>
+                    <th scope="row">1 семестр</td>
+                    <td>Высшая математика</td>
+                    <td>Алгоритмизация и программирование</td>
+                    <td>Информатика</td>
+                    <td>История</td>
+                    <td>Физика</td>
+                    <td>Экология</td>
+                    <td>Дискретная математика</td>
+                    <td>Английский язык</td>
                 </tr>
-                <tr class="table-row even">
-                    <th scope="row" class="th">2 семестр</td>
-                    <td class="td">Высшая математика</td>
-                    <td class="td">Алгоритмизация и программирование</td>
-                    <td class="td">Физика</td>
-                    <td class="td">Философия</td>
-                    <td class="td">Основы теории права</td>
-                    <td class="td">Экономика</td>
-                    <td class="td">БЖД</td>
-                    <td class="td">Английский язык</td>
+                <tr>
+                    <th scope="row">2 семестр</td>
+                    <td>Высшая математика</td>
+                    <td>Алгоритмизация и программирование</td>
+                    <td>Физика</td>
+                    <td>Философия</td>
+                    <td>Основы теории права</td>
+                    <td>Экономика</td>
+                    <td>БЖД</td>
+                    <td>Английский язык</td>
                 </tr>
-                <tr class="table-row odd">
-                    <th scope="row" class="th">3 семестр</td>
-                    <td class="td">Архитектура компьютерных систем</td>
-                    <td class="td">Высшая математика</td>
-                    <td class="td">Дискретная математика</td>
-                    <td class="td">ООП</td>
-                    <td class="td">ТЭЦ</td>
-                    <td class="td">Экономика предприятия</td>
-                    <td class="td">Компьютерная графика</td>
-                    <td class="td">Английский язык</td>
+                <tr>
+                    <th scope="row">3 семестр</td>
+                    <td>Архитектура компьютерных систем</td>
+                    <td>Высшая математика</td>
+                    <td>Дискретная математика</td>
+                    <td>ООП</td>
+                    <td>ТЭЦ</td>
+                    <td>Экономика предприятия</td>
+                    <td>Компьютерная графика</td>
+                    <td>Английский язык</td>
                 </tr>
-                <tr class="table-row even">
-                    <th scope="row" class="th">4 семестр</td>
-                    <td class="td">Электроника</td>
-                    <td class="td">Основы теории алгоритмов</td>
-                    <td class="td">Теория вероятностей и математическая статистика</td>
-                    <td class="td">Английский язык</td>
-                    <td class="td">Системный анализ</td>
-                    <td class="td">Теория баз данных</td>
-                    <td class="td">ТСПП</td>
-                    <td class="td">ОС</td>
+                <tr>
+                    <th scope="row">4 семестр</td>
+                    <td>Электроника</td>
+                    <td>Основы теории алгоритмов</td>
+                    <td>Теория вероятностей и математическая статистика</td>
+                    <td>Английский язык</td>
+                    <td>Системный анализ</td>
+                    <td>Теория баз данных</td>
+                    <td>ТСПП</td>
+                    <td>ОС</td>
                 </tr>
             </table>
         </section>
