Update photo styling

--- a/Web/Portfolio/src/html/about.html
+++ b/Web/Portfolio/src/html/about.html
@@ -42,12 +42,12 @@
             <p>Вот еще фоточки:</p>
 
             <div class="photo-wrapper">
-                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
-                <img src="../images/picachu.jpg" alt="funny picachu" title="Picachu!" />
+                <img src="../images/bridge.jpg" alt="Bridge" />
+                <img src="../images/green.jpeg" alt="Greens" />
+                <img src="../images/statue.jpg" alt="Statue" />
+                <img src="../images/cock.jpg" alt="Cock" />
+                <img src="../images/city.jpg" alt="City" />
+                <img src="../images/fire.jpg" alt="Fire" />
             </div>
         </section>
     </div>
