Continue working with forms

--- a/Web/Portfolio/src/html/contact.html
+++ b/Web/Portfolio/src/html/contact.html
@@ -73,6 +73,6 @@
             </p>
         </section>
     </footer>
-    <script src="../js/forms.js"></script>
-</body>
+    <script src="../js/contact.js" type="module"></script>
+    <script src="../js/shared.js" type="module"></script>
 </html>
