--- a/Web/Portfolio/src/html/test.html
+++ b/Web/Portfolio/src/html/test.html
@@ -91,6 +91,6 @@
             </p>
         </section>
     </footer>
-    <script src="../js/forms.js"></script>
+    <script src="../js/test.js"></script>`
 </body>
 </html>
