Remove ul bullets from interests list

--- a/Web/Portfolio/src/html/interests.html
+++ b/Web/Portfolio/src/html/interests.html
@@ -26,11 +26,11 @@
         <header><h1>Мои интересы</h1></header>
         <section>
             <header><h2>Contents</h1></header>
-            <ul>
-                <li><span class="contents" id="Hobbies">Мои хобби.</span></li>
-                <li><span class="contents" id="Books">Мои книги.</span></li>
-                <li><span class="contents" id="Music">Моя музыка.</span></li>
-                <li><span class="contents" id="Films">Мои фильмы.</span></li>
+            <ul id="interests">
+                <li class="contents" id="Hobbies">Мои хобби.</li>
+                <li class="contents" id="Books">Мои книги.</li>
+                <li class="contents" id="Music">Моя музыка.</li>
+                <li class="contents" id="Films">Мои фильмы.</li>
             </ul>
         </section>
     </div>
