--- a/Web/Portfolio/src/html/index.html
+++ b/Web/Portfolio/src/html/index.html
@@ -19,6 +19,7 @@
             <li><a href="photos.html"   >Photos</a></li>
             <li><a href="contact.html"  >Contact</a></li>
             <li><a href="test.html"     >Test</a></li>
+            <li><span id="time"></span><br><span id="date"></span></li>
         </ul>
     </nav>
     <img src="../images/portrait.jpg" class="portrait">
@@ -84,5 +85,6 @@
             </p>
         </section>
     </footer>
+    <script src="../js/index.js"></script>
 </body>
 </html>
