--- a/Web/Portfolio/src/html/test.html
+++ b/Web/Portfolio/src/html/test.html
@@ -53,7 +53,7 @@
                     </li>
                     <li>
                         <label for="full-name-input">Full Name</label>
-                        <input type="text" name="full-name" id="full-name-input" class="field-long" placeholder="First" />
+                        <input type="text" name="full-name" id="full-name-input" class="field-long" />
                     </li>
                     <li>
                         <label for="email-input">Email</label>
