--- a/Web/Portfolio/html/about.html
+++ b/Web/Portfolio/html/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <link href="../css/nav.css" rel="stylesheet" type="text/css" />
-    <link href="../css/shared.css" rel="stylesheet" type="text/css" />
-    <title>Interests</title>
+    <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
+    <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
+    <title>About</title>
 </head>
 <body>
     <nav>
@@ -24,15 +24,32 @@
     </nav>
     <img src="../images/portrait.jpg" class="portrait">
     <div class="main-content">
-        <header><h1>Мои интересы</h1></header>
+        <header><h1>Автобиография</h1></header>
+
         <section>
-            <header><h2>Contents</h1></header>
-            <ul id="interests">
-                <li class="contents" id="Hobbies">Мои хобби.</li>
-                <li class="contents" id="Books">Мои книги.</li>
-                <li class="contents" id="Music">Моя музыка.</li>
-                <li class="contents" id="Films">Мои фильмы.</li>
-            </ul>
+            <header><h1>Раздел 1</h1></header>
+
+            <p>Здесь должна быть какая-то автобиография. Пускай тут будет списочек:</p>
+
+            <ol>
+                <li>19 лет.</li>
+                <li>Сын своих родителей.</li>
+                <li>Не знаю чего написать еще.</li>
+                <li>Пойду заварю чайку.</li>
+                <li>Заварил.</li>
+                <li>Рыба меч дыня друг.</li>
+            </ol>
+
+            <p>Вот еще фоточки:</p>
+
+            <div class="photo-wrapper">
+                <img src="../images/bridge.jpg" alt="Bridge" />
+                <img src="../images/green.jpeg" alt="Greens" />
+                <img src="../images/statue.jpg" alt="Statue" />
+                <img src="../images/cock.jpg" alt="Cock" />
+                <img src="../images/city.jpg" alt="City" />
+                <img src="../images/fire.jpg" alt="Fire" />
+            </div>
         </section>
     </div>
     <footer>
@@ -53,6 +70,6 @@
             </p>
         </section>
     </footer>
-    <script src="../js/interests.js"></script>
+    <script src="../js/about.js"></script>
 </body>
 </html>
