--- a/Web/Portfolio/html/contact.html
+++ b/Web/Portfolio/html/contact.html
@@ -50,6 +50,10 @@
                         <textarea name="field4" id="message-input" class="field-long"></textarea>
                     </li>
                     <li>
+                        <label for="date-input">Date</label>
+                        <input type="text" name="date" id="date-input" class="field-long datepicker-input" />
+                    </li>
+                    <li>
                         <input type="submit" value="Submit" />
                     </li>
                 </ol>
