Replace unique elements classes with ids

--- a/Web/Portfolio/html/contact.html
+++ b/Web/Portfolio/html/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
     <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
+    <link href='../src/datepicker/datepicker.css' rel="stylesheet" type="text/css" />
     <title>Contact page</title>
 </head>
 <body>
@@ -50,8 +51,8 @@
                         <textarea name="field4" id="message-input" class="field-long"></textarea>
                     </li>
                     <li>
-                        <label for="date-input">Date</label>
-                        <input type="text" name="date" id="date-input" class="field-long datepicker-input" />
+                        <label for="datepicker-input">Date</label>
+                        <input type="text" name="date" id="datepicker-input" class="field-long" />
                     </li>
                     <li>
                         <input type="submit" value="Submit" />
