Rename photos module to lightbox

--- a/Web/Portfolio/html/photos.html
+++ b/Web/Portfolio/html/photos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
     <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
-    <link href="../src/photos/photos.css" rel="stylesheet" type="text/css" />
+    <link href="../src/photos/lightbox.css" rel="stylesheet" type="text/css" />
     <title>Photo album</title>
 </head>
 <body>
