Introduce history page sample

--- a/Web/Portfolio/html/history.html
+++ b/Web/Portfolio/html/history.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
     <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
-    <title>Interests</title>
+    <title>History</title>
 </head>
 <body>
     <nav>
@@ -25,15 +25,9 @@
     </nav>
     <img src="../images/portrait.jpg" class="portrait">
     <div class="main-content">
-        <header><h1>Мои интересы</h1></header>
+        <header><h1>История</h1></header>
         <section>
-            <header><h2>Contents</h1></header>
-            <ul id="interests">
-                <li class="contents" id="Hobbies">Мои хобби.</li>
-                <li class="contents" id="Books">Мои книги.</li>
-                <li class="contents" id="Music">Моя музыка.</li>
-                <li class="contents" id="Films">Мои фильмы.</li>
-            </ul>
+
         </section>
     </div>
     <footer>
@@ -54,6 +48,6 @@
             </p>
         </section>
     </footer>
-    <script src="../js/interests.js"></script>
+    <script src="../js/history.js"></script>
 </body>
 </html>
