--- a/Web/Portfolio/html/contact.html
+++ b/Web/Portfolio/html/contact.html
@@ -20,6 +20,7 @@
             <li><a href="photos.html"   >Photos</a></li>
             <li><a href="contact.html"  >Contact</a></li>
             <li><a href="test.html"     >Test</a></li>
+            <li><a href="history.html"  >History</a></li>
             <li><span id="time"></span><br><span id="date"></span></li>
         </ul>
     </nav>
