--- a/Web/Portfolio/html/history.html
+++ b/Web/Portfolio/html/history.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta charset="utf-8" />
     <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
     <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
     <title>History</title>
@@ -27,7 +28,32 @@
     <div class="main-content">
         <header><h1>История</h1></header>
         <section>
-
+            <header><h2>История сессии</h2></header>
+            <table class="session-history">
+                <tr><th colspan="2"> История сессии</th></tr>
+                <tr><td>Домашняя страница</td><td class='home'></td></tr>
+                <tr><td>Обо мне</td><td class='about'></td></tr>
+                <tr><td>Мои интересы</td><td class='interests'></td></tr>
+                <tr><td>Учеба</td><td class='learning'></td></tr>
+                <tr><td>Фото</td><td class='photos'></td></tr>
+                <tr><td>Контакт</td><td class='contact'></td></tr>
+                <tr><td>Тест</td><td class='test'></td></tr>
+                <tr><td>История</td><td class='history'></td></tr>
+            </table>
+        </section>
+        <section>
+            <header><h2>История за все время</h2></header>
+            <table class="global-history">
+                <tr><th colspan="2">История за все время</th></tr>
+                <tr><td>Домашняя страница</td><td class='home'></td></tr>
+                <tr><td>Обо мне</td><td class='about'></td></tr>
+                <tr><td>Мои интересы</td><td class='interests'></td></tr>
+                <tr><td>Учеба</td><td class='learning'></td></tr>
+                <tr><td>Фото</td><td class='photos'></td></tr>
+                <tr><td>Контакт</td><td class='contact'></td></tr>
+                <tr><td>Тест</td><td class='test'></td></tr>
+                <tr><td>История</td><td class='history'></td></tr>
+            </table>
         </section>
     </div>
     <footer>
@@ -48,6 +74,6 @@
             </p>
         </section>
     </footer>
-    <script src="../js/history.js"></script>
+    <script src="../js/history.js" type="text/javascript"></script>
 </body>
 </html>
