--- a/Web/Portfolio/html/interests.html
+++ b/Web/Portfolio/html/interests.html
@@ -30,9 +30,65 @@
             <header><h2>Contents</h1></header>
             <ul id="interests">
                 <li class="contents" id="Hobbies">Мои хобби.</li>
+                <li id="Hobbies-expand" class="interests">
+                    <h2>My hobbies</h2>
+                    <p>My hobbies are supposed to be here</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consecteturadipiscing elit. Sed gravida
+                        dolor et ultricies placerat. Pellentesque in lectus at augue rutrum
+                        volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur
+                        fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
+                        semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia
+                        vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
+                        libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa
+                        sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet.
+                        Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque,
+                        faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
+                        condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.
+                    </p>
+                </li>
                 <li class="contents" id="Books">Мои книги.</li>
+                <li id="Books-expand" class="interests"><h2>My books</h2>
+                    <p>My books are supposed to be here</p>
+                    <p>Lorem ipsum dolor sit amet, consecteturadipiscing elit. Sed gravida
+                        dolor et ultricies placerat. Pellentesque in lectus at augue rutrum
+                        volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur
+                        fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
+                        semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia
+                        vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
+                        libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa
+                        sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet.
+                        Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque,
+                        faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
+                        condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.</p></li>
                 <li class="contents" id="Music">Моя музыка.</li>
+                <li id="Music-expand" class="interests"><h2>My music</h2>
+                    <p>My music is supposed to be here</p>
+                    <p>Lorem ipsum dolor sit amet, consecteturadipiscing elit. Sed gravida
+                        dolor et ultricies placerat. Pellentesque in lectus at augue rutrum
+                        volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur
+                        fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
+                        semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia
+                        vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
+                        libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa
+                        sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet.
+                        Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque,
+                        faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
+                        condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.</p></li>
                 <li class="contents" id="Films">Мои фильмы.</li>
+                <li id="Films-expand" class="interests"><h2>My films</h2>
+                    <p>My films are supposed to be here</p>
+                    <p>Lorem ipsum dolor sit amet, consecteturadipiscing elit. Sed gravida
+                        dolor et ultricies placerat. Pellentesque in lectus at augue rutrum
+                        volutpat vel sed tellus. Donec feugiat ac nibh et pharetra. Curabitur
+                        fringilla lacinia nisl tempus mollis. Nam semper augue et ante ornare
+                        semper. Etiam nunc velit, pharetra eget fermentum tincidunt, lacinia
+                        vitae sapien. Etiam quis elit tincidunt, consequat urna eget, vulputate
+                        libero. Donec dignissim ornare porttitor. Donec id augue turpis. Morbi massa
+                        sem, dapibus at semper in, mollis a sem. Ut eu lacus ut leo aliquam laoreet.
+                        Integer sed ex vel erat dictum finibus sit amet id mi. Duis lorem neque,
+                        faucibus ut laoreet eu, sodales in orci. Nam mattis mauris sit amet lectus
+                        condimentum, in maximus massa ultrices. Fusce pharetra accumsan dui sed bibendum.</p></li>
             </ul>
         </section>
     </div>
