Migrate history page to jQuery

--- a/Web/Portfolio/html/history.html
+++ b/Web/Portfolio/html/history.html
@@ -31,28 +31,28 @@
             <header><h2>История сессии</h2></header>
             <table class="session-history">
                 <tr><th colspan="2"> История сессии</th></tr>
-                <tr><td>Домашняя страница</td><td class='home'></td></tr>
-                <tr><td>Обо мне</td><td class='about'></td></tr>
-                <tr><td>Мои интересы</td><td class='interests'></td></tr>
-                <tr><td>Учеба</td><td class='learning'></td></tr>
-                <tr><td>Фото</td><td class='photos'></td></tr>
-                <tr><td>Контакт</td><td class='contact'></td></tr>
-                <tr><td>Тест</td><td class='test'></td></tr>
-                <tr><td>История</td><td class='history'></td></tr>
+                <tr><td>Домашняя страница</td><td class='home-page'></td></tr>
+                <tr><td>Обо мне</td><td class='about-page'></td></tr>
+                <tr><td>Мои интересы</td><td class='interests-page'></td></tr>
+                <tr><td>Учеба</td><td class='learning-page'></td></tr>
+                <tr><td>Фото</td><td class='photos-page'></td></tr>
+                <tr><td>Контакт</td><td class='contact-page'></td></tr>
+                <tr><td>Тест</td><td class='test-page'></td></tr>
+                <tr><td>История</td><td class='history-page'></td></tr>
             </table>
         </section>
         <section>
             <header><h2>История за все время</h2></header>
             <table class="global-history">
                 <tr><th colspan="2">История за все время</th></tr>
-                <tr><td>Домашняя страница</td><td class='home'></td></tr>
-                <tr><td>Обо мне</td><td class='about'></td></tr>
-                <tr><td>Мои интересы</td><td class='interests'></td></tr>
-                <tr><td>Учеба</td><td class='learning'></td></tr>
-                <tr><td>Фото</td><td class='photos'></td></tr>
-                <tr><td>Контакт</td><td class='contact'></td></tr>
-                <tr><td>Тест</td><td class='test'></td></tr>
-                <tr><td>История</td><td class='history'></td></tr>
+                <tr><td>Домашняя страница</td><td class='home-page'></td></tr>
+                <tr><td>Обо мне</td><td class='about-page'></td></tr>
+                <tr><td>Мои интересы</td><td class='interests-page'></td></tr>
+                <tr><td>Учеба</td><td class='learning-page'></td></tr>
+                <tr><td>Фото</td><td class='photos-page'></td></tr>
+                <tr><td>Контакт</td><td class='contact-page'></td></tr>
+                <tr><td>Тест</td><td class='test-page'></td></tr>
+                <tr><td>История</td><td class='history-page'></td></tr>
             </table>
         </section>
     </div>
