Refactor photos page

--- a/Web/Portfolio/html/photos.html
+++ b/Web/Portfolio/html/photos.html
@@ -48,6 +48,18 @@
             </p>
         </section>
     </footer>
+    <div id="lightbox">
+        <div class="lightbox-content">
+            <div class="image-wrapper">
+                <img src="file:///D:/Learning/Web/Portfolio/images/lion-king.jpg" class="lightbox-picture" />
+            </div>
+            <div class="lightbox-navigation">
+                <div class="lightbox-button lightbox-arrow-left">&lt;</div>
+                <div class="lightbox-button lightbox-arrow-right">&gt;</div>
+            </div>
+        </div>
+        <div class="lightbox-button lightbox-close">×</div>
+    </div>
     <script src="../js/photos.js"></script>
 </body>
 </html>
