Introduce modal window

--- a/Web/Portfolio/html/test.html
+++ b/Web/Portfolio/html/test.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
     <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/tooltipster/dist/css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css"/>
     <title>Test page</title>
 </head>
 <body>
@@ -30,7 +32,7 @@
                 <h1>Тест по инженерной графике</h1>
             </header>
 
-            <p>All fields are required!</p>
+            <p>All fields are required! Hover over fields to see the additional requirements.</p>
 
             <form method="POST" action="someaction">
                 <ol>
