--- a/Web/Portfolio/html/contact.html
+++ b/Web/Portfolio/html/contact.html
@@ -7,6 +7,8 @@
     <link href="../src/pages/nav.css" rel="stylesheet" type="text/css" />
     <link href="../src/pages/shared.css" rel="stylesheet" type="text/css" />
     <link href='../src/datepicker/datepicker.css' rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/tooltipster/dist/css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="../node_modules/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css"/>
     <title>Contact page</title>
 </head>
 <body>
@@ -31,7 +33,7 @@
                 <h1>Mail Me!</h1>
             </header>
 
-            <p>All fields are required!</p>
+            <p>All fields are required! Hover over fields to see the additional requirements.</p>
 
             <form method="POST" action="someaction">
                 <ol>
