Fix html issues

--- a/Web/Portfolio/html/learning.html
+++ b/Web/Portfolio/html/learning.html
@@ -35,7 +35,7 @@
                     <td colspan="9">Дисциплины по семестрам</td>
                 </tr>
                 <tr>
-                    <th scope="row">1 семестр</td>
+                    <th scope="row">1 семестр</th>
                     <td>Высшая математика</td>
                     <td>Алгоритмизация и программирование</td>
                     <td>Информатика</td>
@@ -46,7 +46,7 @@
                     <td>Английский язык</td>
                 </tr>
                 <tr>
-                    <th scope="row">2 семестр</td>
+                    <th scope="row">2 семестр</th>
                     <td>Высшая математика</td>
                     <td>Алгоритмизация и программирование</td>
                     <td>Физика</td>
@@ -57,7 +57,7 @@
                     <td>Английский язык</td>
                 </tr>
                 <tr>
-                    <th scope="row">3 семестр</td>
+                    <th scope="row">3 семестр</th>
                     <td>Архитектура компьютерных систем</td>
                     <td>Высшая математика</td>
                     <td>Дискретная математика</td>
@@ -68,7 +68,7 @@
                     <td>Английский язык</td>
                 </tr>
                 <tr>
-                    <th scope="row">4 семестр</td>
+                    <th scope="row">4 семестр</th>
                     <td>Электроника</td>
                     <td>Основы теории алгоритмов</td>
                     <td>Теория вероятностей и математическая статистика</td>
